# vd-index

./: .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  NEW_REFACTR.md  NGINX_TROUBLESHOOTING.md  PLAN.md  REFACTOR_PLAN.md  SECURITY_SETUP.md  nginx.conf  package.json  pnpm-lock.yaml  secret_key
src/backend/: .env.example  README.md  alembic.ini  check_unicode.py  create_admin.py  debug_auth.py  fix_unicode_data.py  main.py  pyproject.toml  run.py  simple_test.py  test_backend.py  test_cache_config.py  test_cache_fix.py  test_cache_performance.py  test_data_generator.py  test_json_fix.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 1bc7654ab16e_add_daily_post_comments.py  (+13 more)
src/backend/api/: activities.py  admin.py  avatars.py  members.py  router.py
src/backend/app/: __init__.py  crypto.py  main.py  models.py  services.py
src/backend/core/: config.py  crypto.py  database.py
src/backend/domain/: __init__.py  avatar_service.py  member_service.py
src/backend/models/: models.py
src/backend/schema/: activity.py  activity2.py  activity_schemas.py  comment.py  comment_schemas.py  config.py  config_schemas.py  daily.py  daily_comment.py  member.py  member_schemas.py
src/backend/scripts/: DEBUG_GUIDE.md  README.md  cleanup_jsonb_data.py  clear_test_data.py  copy_avatars.py  create_sample_activities.py  debug_avatar.py  env_compare.py  import_group_json.py  init_database.py  migrate_data.py  quick_avatar_test.py  secret_key  test_avatar.py  test_crypto.py  verify_import.py
src/backend/services/: avatar_service.py  deps.py  member_service.py  schema.py
src/backend/static/: qq_group_members.example.json
src/backend/test/: README.md  conftest.py  simple_test.py  test_activities.py  test_activities_simple.py  test_cache_service.py  test_comments.py  test_crud_operations.py  test_crud_simple.py  test_database_connection.py  test_database_service.py  test_integration_comments.py  test_member_crud.py  test_member_crud_simple.py
src/backend/tests/: test_daily_post_insert.py  test_jsonb_models.py  test_time_beijing.py
src/backend/utils/: __init__.py  avatar.py  avatar_config.py  avatar_optimizer.py  download_avatars.py  uploads.py
(+196 files in other folders)
